Closed Bug 1615156 Opened 6 years ago Closed 6 years ago

Fix KeyframeEffect::ContainsAnimatedScale for cases we have no base style.

Categories

(Core :: DOM: Animation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox75 --- fixed

People

(Reporter: hiro, Assigned: hiro)

References

Details

Attachments

(1 file)

The baseStyle is only set if there is an add/accumulate animation. So the code there should be;

AnimationValue baseStyle = BaseStyle(prop.mProperty);                       
if (!baseStyle.IsNull()) {                                                   
  gfx::Size size = baseStyle.GetScaleValue(aFrame);                         
  if (size != gfx::Size(1.0f, 1.0f)) {                                      
    return true;                                                            
  }                                                                         
} 

I am going to fix this soon. That's said it's not with any automated tests since as far as I can tell this is not testable. There is another underlying issue which caused bug 1614788. And the underlying issue obscured this issue, as far as I can tell.

The base style is not set in cases where there is no additive/accumulative
animation.

Assignee: nobody → hikezoe.birchill
Status: NEW → ASSIGNED

Thanks for patching this!

Pushed by hikezoe.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/45c632e12bd6 Don't return true from KeyframeEffect::ContainsAnimatedScale if there is no base style. r=boris
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: