Bug 1615156 - Don't return true from KeyframeEffect::ContainsAnimatedScale if there is no base style. r=boris

The base style is not set in cases where there is no additive/accumulative
animation.

Differential Revision: https://phabricator.services.mozilla.com/D62691

--HG--
extra : moz-landing-system : lando